--- a/src/prompts/prompts.ipynb
+++ b/src/prompts/prompts.ipynb
@@ -262,9 +262,9 @@
    "outputs": [],
    "source": [
     "# this is how a response would be parsed to get values\n",
-    "# response = chat(database_dev_prompt)\n",
-    "# output_dict = output_parser.parse(response.content)\n",
-    "# output_dict[\"code\"]"
+    "response = chat(database_dev_prompt)\n",
+    "output_dict = output_parser.parse(response.content)\n",
+    "output_dict[\"code\"]"
    ]
   },
   {
