--- a/src/prompts/prompts.ipynb
+++ b/src/prompts/prompts.ipynb
@@ -246,7 +246,8 @@
       "{\n",
       "\t\"code\": string  // SQL Statements you wrote for the task.\n",
       "}\n",
-      "```\n"
+      "```\n",
+      "Only output this, and put your generated code in the json. Do not output any additional comments.\n"
      ]
     }
    ],
@@ -262,9 +263,9 @@
    "outputs": [],
    "source": [
     "# this is how a response would be parsed to get values\n",
-    "response = chat(database_dev_prompt)\n",
-    "output_dict = output_parser.parse(response.content)\n",
-    "output_dict[\"code\"]"
+    "# response = chat(database_dev_prompt)\n",
+    "# output_dict = output_parser.parse(response.content)\n",
+    "# output_dict[\"code\"]"
    ]
   },
   {
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +458,8 @@
       "\t\"code\": string  // The code you wrote based on the described requirements.\n",
       "\t\"pip_packages\": string  // The names of the pip packages that need to be installed. In a list.\n",
       "}\n",
-      "```\n"
+      "```\n",
+      "Only output this, and put your generated code in the json. Do not output any additional comments.\n"
      ]
     }
    ],
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,9 +505,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a software developer specialized in testing backend systems and it is your responsibility to check code for errors or mistakes. You will be provided with some code that is used to interact with a database as well as some error logs if there are any. \n",
+      "This is the code you have to check:\n",
+      "No code\n",
+      "\n",
+      "These are the error logs:\n",
+      "No errors\n",
+      "\n",
+      "Based on this code write a report and point out any mistakes or errors you have found. Explain them and suggest how they could be corrected. Only point errors, mistakes or things that are incorrect and do not talk about things that are well done. It is possible that there are no errors or bad practices in which case your report will be empty.\n",
+      "The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "\t\"revision_needed\": string  // Based on your evaluation, are there any errors that need to be fixed? Answer True if yes, False if no.\n",
+      "\t\"feedback\": string  // Report with your analysis of the code.\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "backend_test_prompt_str = backend_test_prompt[0].content\n",
     "print(backend_test_prompt_str)"
@@ -520,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,9 +569,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a specialist for writing a documentation for code. It is your responsibility to analyze some given code and write a short description, so that someone else can understand what functionalities there are. You will be provided with some code that is used to access a database. It is your task to write a short documentation that describes what functions there are and what they are capable of. Explicitly point out what URL endpoints there are.\n",
+      "This is the code:\n",
+      "No code\n",
+      "The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "\t\"documentation\": string  // The documentation of the code.\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "backend_doc_prompt_str = backend_doc_prompt[0].content\n",
     "print(backend_doc_prompt_str)"
@@ -568,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,9 +640,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a software developer specialized in frontend webpages. It is your responsibility to write the necessary code to display a webpage and perform certain funtionalities. You will be provided with some requirements by your manager and a description of the backend system. It is now your task to provide the html, css and javascript code that fufill the listed requirments.\n",
+      "Tasks für das Frontend\n",
+      "\n",
+      "This is the description of the backend functionalities and endpoints you should use:\n",
+      "Dokumentation des Backend\n",
+      "\n",
+      "The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "\t\"html_code\": string  // The html code you wrote.\n",
+      "\t\"css_code\": string  // The css code you wrote.\n",
+      "\t\"js_code\": string  // The javascript code you wrote.\n",
+      "}\n",
+      "```\n",
+      "Only output this, and put your generated code in the json. Do not output any additional comments.\n"
+     ]
+    }
+   ],
    "source": [
     "frontend_dev_prompt_str = frontend_dev_prompt[0].content\n",
     "print(frontend_dev_prompt_str)"
@@ -615,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,9 +708,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a software developer specialized in testing webpages and it is your responsibility to check code for errors or mistakes. You will be provided with some code that is used to create a simple webpage as well as some error logs if there are any. \n",
+      "This is the code you have to check:\n",
+      "No code\n",
+      "\n",
+      "These are the error logs:\n",
+      "No errors\n",
+      "\n",
+      "Based on this code write a report and point out any mistakes or errors you have found. Explain them and suggest how they could be corrected. Only point errors, mistakes or things that are incorrect do not talk about things that are well done. It is possible that there are no errors or bad practices in this case the report is empty.\n",
+      "\n",
+      "The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "\t\"revision_needed\": string  // Based on your evaluation, are there any errors that need to be fixed? Answer True if yes, False if no.\n",
+      "\t\"feedback\": string  // Report with your analysis of the code.\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "frontend_test_prompt_str = frontend_test_prompt[0].content\n",
     "print(frontend_test_prompt_str)"
@@ -660,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,9 +773,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a specialist for writing a documentation for code. It is your responsibility to analyze some given code and write a short description, so that someone else can understand what functionalities there are. You will be provided with some code that is used to create a webpage. It is your task to write a short documentation that describes what functions there are and what they are capable of.\n",
+      "This is the code:\n",
+      "No code\n",
+      "\n",
+      "The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "\t\"documentation\": string  // The documentation of the code.\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "frontend_doc_prompt_str = frontend_doc_prompt[0].content\n",
     "print(frontend_doc_prompt_str)"
