updated prompts and new parsers for code

--- a/src/prompts/prompts.ipynb
+++ b/src/prompts/prompts.ipynb
@@ -798,6 +798,255 @@
     "frontend_doc_prompt_str = frontend_doc_prompt[0].content\n",
     "print(frontend_doc_prompt_str)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import (\n",
+    "    ChatPromptTemplate,\n",
+    "    HumanMessagePromptTemplate,\n",
+    "    MessagesPlaceholder,\n",
+    "    SystemMessagePromptTemplate,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate(\n",
+    "            messages=[\n",
+    "                SystemMessagePromptTemplate.from_template(\"self.character\"),\n",
+    "                MessagesPlaceholder(variable_name=\"chat_history\"),\n",
+    "                HumanMessagePromptTemplate.from_template(\"{message}\"),\n",
+    "            ]\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=['chat_history', 'message'], input_types={'chat_history': typing.List[typing.Union[langchain_core.messages.ai.AIMessage, langchain_core.messages.human.HumanMessage, langchain_core.messages.chat.ChatMessage, langchain_core.messages.system.SystemMessage, langchain_core.messages.function.FunctionMessage, langchain_core.messages.tool.ToolMessage]]}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='self.character')), MessagesPlaceholder(variable_name='chat_history'), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['message'], template='{message}'))])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"key\": \"value\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_section(input_string, section_type):\n",
+    "    \"\"\"\n",
+    "    Extracts a section from the input string that starts with ```<section_type>\n",
+    "    and ends with ```\n",
+    "\n",
+    "    :param input_string: The string to parse\n",
+    "    :param section_type: The type of section to extract (e.g., 'json', 'python')\n",
+    "    :return: The extracted section or an empty string if not found\n",
+    "    \"\"\"\n",
+    "    start_marker = f\"```{section_type}\"\n",
+    "    end_marker = \"```\"\n",
+    "\n",
+    "    start_index = input_string.find(start_marker)\n",
+    "    if start_index == -1:\n",
+    "        return \"\"  # Start marker not found\n",
+    "\n",
+    "    # Adjust start index to skip the marker itself\n",
+    "    start_index += len(start_marker)\n",
+    "\n",
+    "    end_index = input_string.find(end_marker, start_index)\n",
+    "    if end_index == -1:\n",
+    "        return \"\"  # End marker not found\n",
+    "\n",
+    "    return input_string[start_index:end_index].strip()\n",
+    "\n",
+    "# Example usage:\n",
+    "input_str = \"Here is some text ```json\\n{\\\"key\\\": \\\"value\\\"}\\n```\\nAnd some more text.\"\n",
+    "section = extract_section(input_str, \"json\")\n",
+    "print(section)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"key\": \"value\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def extract_code(input_string, language):\n",
+    "    \"\"\"\n",
+    "    Extracts a code section from the input string that starts with ```<language>\n",
+    "    and ends with ```.\n",
+    "    \n",
+    "    :param input_string: The string to be parsed.\n",
+    "    :param language: The language specifier (e.g. 'json', 'python').\n",
+    "    :return: Extracted code section or an empty string if not found.\n",
+    "    \"\"\"\n",
+    "    pattern = f\"```{language}(.*?)```\"\n",
+    "    match = re.search(pattern, input_string, re.DOTALL)\n",
+    "\n",
+    "    if match:\n",
+    "        return match.group(1).strip()\n",
+    "    else:\n",
+    "        return \"\"\n",
+    "    \n",
+    "\n",
+    "# Example usage:\n",
+    "input_str = \"Here is some text ```json\\n{\\\"key\\\": \\\"value\\\"}\\n```\\nAnd some more text.\"\n",
+    "section = extract_code(input_str, \"json\")\n",
+    "print(section)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"subscribers\": [\n",
+      "    {\n",
+      "      \"id\": 1,\n",
+      "      \"name\": \"John\",\n",
+      "      \"age\": 25,\n",
+      "      \"email\": \"john@example.com\",\n",
+      "      \"subscription_date\": \"2022-01-15\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"id\": 2,\n",
+      "      \"name\": \"Alice\",\n",
+      "      \"age\": 30,\n",
+      "      \"email\": \"alice@example.com\",\n",
+      "      \"subscription_date\": \"2022-02-20\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage:\n",
+    "input_str = \"\"\"Database Tester: The structure of the \"subscribers\" entity seems to be well-defined, with attributes for \"id\", \"name\", and \"age\" for each subscriber. However, it would be beneficial to include additional attributes such as \"email\", \"subscription_date\", or any other relevant information that might be associated with subscribers. This will provide a more comprehensive view of the subscribers and their details.\n",
+    "Database Dev: ```json\n",
+    "{\n",
+    "  \"subscribers\": [\n",
+    "    {\n",
+    "      \"id\": 1,\n",
+    "      \"name\": \"John\",\n",
+    "      \"age\": 25,\n",
+    "      \"email\": \"john@example.com\",\n",
+    "      \"subscription_date\": \"2022-01-15\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"id\": 2,\n",
+    "      \"name\": \"Alice\",\n",
+    "      \"age\": 30,\n",
+    "      \"email\": \"alice@example.com\",\n",
+    "      \"subscription_date\": \"2022-02-20\"\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "```\"\"\"\n",
+    "section = extract_code(input_str, \"json\")\n",
+    "print(section)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```sql\" and \"```\":'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def output_format(language: str, code_only: bool) -> str:\n",
+    "    \"\"\"\n",
+    "    Generates a markdown code snippet with a specified programming language.\n",
+    "\n",
+    "    :param language: The language for the code snippet (e.g., 'python', 'javascript').\n",
+    "    :param code_only: A boolean to force that only the code block is outputed.\n",
+    "    :return: A string containing the formatted markdown code snippet.\n",
+    "    \"\"\"\n",
+    "    instructions = f'The output should be a markdown code snippet, starting with \"```{language}\" and ending with \"```\".'\n",
+    "    if code_only:\n",
+    "        force_code = 'Only output this markdown code snippet. Do not output any additional comments.'\n",
+    "        return instructions+' '+force_code\n",
+    "\n",
+    "    return instructions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The output should be a markdown code snippet, starting with \"```sql\" and ending with \"```\". Only output this markdown code snippet. Do not output any additional comments.'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_format('sql', True)"
+   ]
   }
  ],
  "metadata": {
