--- a/experiments/stuff/langchain_stuff.ipynb
+++ b/experiments/stuff/langchain_stuff.ipynb
@@ -36,18 +36,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LLMChain(memory=ConversationBufferMemory(return_messages=True, memory_key='chat_history'), prompt=ChatPromptTemplate(input_variables=['chat_history', 'message'], input_types={'chat_history': typing.List[typing.Union[langchain_core.messages.ai.AIMessage, langchain_core.messages.human.HumanMessage, langchain_core.messages.chat.ChatMessage, langchain_core.messages.system.SystemMessage, langchain_core.messages.function.FunctionMessage, langchain_core.messages.tool.ToolMessage]]}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='This is the character')), MessagesPlaceholder(variable_name='chat_history'), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['message'], template='{message}'))]), llm=ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x000001D0C6B211B0>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x000001D0D8370B20>, model_name='gpt-3.5-turbo-1106', temperature=0.1, openai_api_key='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', openai_proxy=''))"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "llm = ChatOpenAI(\n",
     "    model_name=model,\n",
@@ -66,7 +55,7 @@
     "    memory_key=\"chat_history\", return_messages=True\n",
     ")\n",
     "\n",
-    "LLMChain(llm=llm, prompt=prompt, verbose=False, memory=memory)"
+    "# LLMChain(llm=llm, prompt=prompt, verbose=False, memory=memory)"
    ]
   }
  ],
